--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -10,11 +10,15 @@ $icon-font-path: '../fonts/';
   color: #000;
   padding: 0.2em 0;
 }
-
+.profile-icon{
+  margin-bottom:10px;
+}
 /* Space out content a bit */
 body {
   padding-top: 70px;
   padding-bottom: 20px;
+  font-family: 'Roboto';
+  font-weight: 300;
 }
 
 /* Everything but the jumbotron gets side spacing for mobile first views */
